[gd_scene load_steps=17 format=2]

[ext_resource path="res://classes/global/singleton/warp.gd" type="Script" id=1]
[ext_resource path="res://classes/global/singleton/singleton.gd" type="Script" id=2]
[ext_resource path="res://classes/global/singleton/death_cover.gd" type="Script" id=3]
[ext_resource path="res://classes/global/singleton/white_warp.gd" type="Script" id=4]
[ext_resource path="res://scenes/levels/tutorial_1/tutorial_1.mp3" type="AudioStream" id=6]
[ext_resource path="res://classes/global/singleton/music.gd" type="Script" id=7]
[ext_resource path="res://classes/pickup/coin/coin_collect.wav" type="AudioStream" id=8]
[ext_resource path="res://gui/sfx/start.wav" type="AudioStream" id=13]
[ext_resource path="res://gui/sfx/confirm.wav" type="AudioStream" id=14]
[ext_resource path="res://gui/sfx/next.wav" type="AudioStream" id=15]
[ext_resource path="res://gui/sfx/back.wav" type="AudioStream" id=16]
[ext_resource path="res://classes/console/console.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/menus/feedback/feedback.tscn" type="PackedScene" id=18]
[ext_resource path="res://gui/timer/timer.tscn" type="PackedScene" id=19]
[ext_resource path="res://classes/global/singleton/input_manager.gd" type="Script" id=20]
[ext_resource path="res://classes/global/singleton/window_warp.gd" type="Script" id=21]

[node name="Singleton" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Warp" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="WindowWarp" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
invert_enable = true
invert_border = 640.0
script = ExtResource( 21 )

[node name="WhiteWarp" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
invert_enable = true
invert_border = 640.0
script = ExtResource( 4 )

[node name="CoverLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="WarpCover" type="ColorRect" parent="CoverLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="DeathCover" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -8.0
bus = "Music"
script = ExtResource( 7 )

[node name="SFX" type="Node" parent="."]
pause_mode = 2

[node name="Coin" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
volume_db = -2.0
bus = "SFX"

[node name="Confirm" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 14 )
volume_db = -15.0
bus = "SFX"

[node name="Start" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 13 )
volume_db = -10.0
bus = "SFX"

[node name="Next" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 15 )
volume_db = -15.0
bus = "SFX"

[node name="Back" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 16 )
volume_db = -15.0
bus = "SFX"

[node name="Console" parent="." instance=ExtResource( 17 )]
pause_mode = 2
visible = false
mouse_filter = 2

[node name="Feedback" parent="." instance=ExtResource( 18 )]

[node name="Timer" parent="." instance=ExtResource( 19 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="InputManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 20 )
